--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,8 +1,83 @@
-<h1>Info</h1>
+<h5>
+  Assessment of the Learning Curve for Narrow Band Imaging in the diagnosis of Helicobacter pylori infection
+</h5>
+
+<h6>ALMA M. AGUDA-PERDIGUERRA, M.D. (Principal Investigator)</h6>
 <p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  Department of Medicine<br>
+  Veterans Memorial Medical Center
 </p>
-<br><br><br>
-<h6>
-  <a href="/pretest">Start Pretest</a>
-</h6>
+
+<h6>INTRODUCTION</h6>
+<p>
+  I am Dr. Alma M. Aguda-Perdiguerra, a Fellow-in-training in the Section of Gastroenterology in the Department of Medicine, Veterans Memorial Medical Center (VMMC). The objective of this research is to determine effectiveness of a web-based teaching module in the diagnosis of Helicobacter pylori infection using Narrow-Band Imaging technique. The result could contribute more on the understanding of Narrow Band Imaging (NBI) and its impact on the society.
+</p>
+<p>
+  I am only affiliated with Veterans Memorial Medical Center. This study is not sponsored by any institution or companies. The expenses in the conduct of this study will come from personal funds. There may also be some foreseeable circumstances and reasons under which the participation in the study may be terminated. Should this happen, the subject will be duly informed beforehand.
+</p>
+<p>
+  Participating in this study is voluntary and refusal to join will not affect our medical management for your current condition.
+</p>
+
+<h6>RESPONSIBILITIES OF THE PARTICIPANTS, RISKS and BENEFITS</h6>
+<p>
+  Your responsibility as a participant in this study is to answer the self-administered questionnaires honestly and to give us as much accurate information as possible. Once included in this study, you are required to the following: take the pre-test, study the web-based teaching module, and then take the post-test. You may do the required tasks at your most comfortable time and place.
+</p>
+
+<p>
+  The outcome of this study will help us broaden our knowledge regarding the use of Narrow band imaging and its possible impact on the diagnosis for gastrointestinal disease through the use of web-based teaching modules. It would help gastroenterologists like us to broaden our knowledge on the said field.
+</p>
+
+<p>
+  There will be no rewards given in joining this study.
+</p>
+
+<h6>CONFIDENTIALITY</h6>
+<p>
+  I will keep all information confidential to the extent allowed by law. To protect your privacy, I will keep the records under a code number rather than by name. Only research staff related with this study will be allowed to look at your questionnaire. Your name or other facts that might point to you will not appear when we talk about this survey or publish its results.
+</p>
+
+<h6>RESULTS OF THE STUDY</h6>
+<p>
+  The research is a part of the requirements of the fellowship program of Veterans Memorial Medical Center. Through your participation, you allow us to broaden our knowledge on Narrow Band Imaging which we can use to improve our management of Helicobacter pylori infection. You also have the right to obtain a copy of the results of this study. Except for the results of this study, we assure you complete confidentiality of your medical records.
+</p>
+
+<h6>RIGHT TO REFUSE OR WITHDRAW</h6>
+<p>
+  You are free to withdraw your participation anytime for whatever reason. 
+</p>
+
+<p>
+  IF YOU HAVE ANY OTHER QUESTIONS<br>
+  You can call or ask questions anytime regarding this study
+</p>
+
+<h6>Alma M. Aguda-Perdiguerra, MD</h6>
+<p>Mobile No.: 09256783227</p>
+
+<p>
+  All parts of this study were reviewed and approved by the Veterans Memorial Medical Center – Institutional Review Board, who is responsible in overseeing the rights of the study participants. For additional information regarding your rights as study participants and for grievances or complaints, you may reach,
+</p>
+
+<p>
+  Dr. Annielyn Beryl Ong-Cornel<br>
+  Chair, VMMC IRB<br>
+  VMMC-IRB, Ward 18, North Ave., Diliman, Quezon City<br>
+  Tel. No.: +632 9276426 local 1368
+</p>
+
+<br><br>
+<p>
+  <label>
+    <input type="checkbox" class="consent"/>
+    <span>
+      I agree to participate in the above-mentioned study. I understood very well the purpose and the mechanics of the study which were clearly explained to me by Dr. Alma M. Aguda-Perdiguerra. My participation is voluntary and I am not forced or threatened by any means.
+    </span>
+  </label>
+</p>
+
+<div class='proceed-container hidden'>
+  <h6>
+    <a href="/pages/survey">Proceed</a>
+  </h6>
+</div>
