--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.survey-container {
+  margin-top: 50px;
+}
+
+.survey-text {
+  margin: 10px 0;
+  font-size: medium;
+}
