--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -12,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container">
-        <div class="navbar-brand">Practice Test</div>
+        <div class="navbar-brand">Image Enhanced Endoscopy</div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,9 +22,9 @@
             <!--li class="nav-item active">
               <a class="nav-link" href="/questions">Questions</a>
             </li-->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/pages/info">Info</a>
-            </li>
+            </li> -->
           </ul>
           <p class="navbar-text float-right">
           <% if user_signed_in? %>
