--- a/app/views/pages/video.html.erb
+++ b/app/views/pages/video.html.erb
@@ -1,5 +1,5 @@
 <h4>Video</h4>
-<iframe id="ytplayer" type="text/html" width="640" height="390" src="https://youtu.be/XPNTDJnMWFs" frameborder="0"></iframe>
+<iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/XPNTDJnMWFs?autoplay=1&origin=http://example.com" frameborder="0"></iframe>
 <br><br><br>
 <h6>
   <a href="/posttest">Proceed to post test</a>
