--- a/app/views/posttest/result.html.erb
+++ b/app/views/posttest/result.html.erb
@@ -1,5 +1,5 @@
 <h4>Posttest Result</h4>
-<p>You got <%= current_user.posttest_score %> correct answer/s.</p>
+<p>You got <%= current_user.posttest_score %> out of 45 correct answer/s.</p>
 <br><br><br>
 <% @questions.each do |question| %>
   <p>
