--- a/app/views/pretest/result.html.erb
+++ b/app/views/pretest/result.html.erb
@@ -1,5 +1,5 @@
 <h4>Pretest Result</h4>
-<p>You got <%= current_user.pretest_score %> correct answer/s.</p>
+<p>You got <%= current_user.pretest_score %> out of 45 correct answer/s.</p>
 <br><br><br>
 <h6>
   <a href="/pages/video">Watch video</a>
