add post test 2

--- a/app/views/posttest2/index.html.erb
+++ b/app/views/posttest2/index.html.erb
@@ -1,6 +1,6 @@
-<h4>Post Test</h4>
+<h4>Post Test 2</h4>
 
-<%= form_with url: '/posttest', method: 'post' do |form| %>
+<%= form_with url: '/posttest2', method: 'post' do |form| %>
   <% @questions.each do |question| %>
     <div class='question-container'>
       <blockquote>
