--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -35,8 +35,9 @@
   <thead>
     <tr>
         <th>Name</th>
-        <th>Pretest</th>
-        <th>Posttest</th>
+        <th>Pre test</th>
+        <th>Post test</th>
+        <th>Post test 2</th>
     </tr>
   </thead>
 
@@ -46,6 +47,7 @@
         <td><%= user.name %></td>
         <td><%= user.pretest_score %></td>
         <td><%= user.posttest_score %></td>
+        <td><%= user.posttest2_score %></td>
       </tr>
     <% end %>
   </tbody>
